el cuadrito se mueve

--- a/index.html
+++ b/index.html
@@ -7,43 +7,13 @@
     <link rel="stylesheet" href="diseño.css">
   </head>
   <body>
-    <table border>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+    <h1 align="center">
+      Juguemos Snake!!
+    </h1>
+    <div id="contenedor">
+      <div id="cabezaSerpiente"></div>
+    </div>
+
     <script  type="text/javascript" src="snake.js"></script>
   </body>
 </html>
